trying to fix bugs on iOS safari

--- a/style.css
+++ b/style.css
@@ -554,6 +554,7 @@ button {
 	height: 100%;
 	transition: transform 0.6s;
 	transform-style: preserve-3d;
+	-webkit-transform-style: preserve-3d;
 	-webkit-transition: transform 0.6s;
 	-moz-transition: transform 0.6s;
 	-ms-transition: transform 0.6s;
@@ -792,11 +793,11 @@ button {
 	/* Start of mobile video section */
 
 	.video-contain {
-		height: fit-content;
+		height: auto;
 		background-color: #9abbeb;
 
 		> video {
-			height: fit-content;
+			height: auto;
 		}
 	}
 
